# MagicReader

./: .gitignore  MagicBoot.service  MagicBoot.sh  MagicReader.service  MagicReboot.service  MagicReboot.sh  MagicWand.service  MagicWand.sh  README.md  app.py  band-testing.txt  bands.json  install.sh  magicreader.py  pyproject.toml  read-once.py  read-test-original.py  read-test.py  rfid-wakeup.py  serial-test.py  service-install.sh  service-stop.sh  settings.json  soft-shutdown.sh  update-code.sh
data/: bands.json  sequences.json  settings.json  tapInPresets.json
magicreader/: api.py  bandManager.py  helpers.py  magicreader.py  rest.py  rfid.py  rfid_mfrc522.py  rfid_weigand.py  sequence.py  sequenceAction.py  sequenceManager.py  soundManager.py  tapInPreset.py  tapInPresetsManager.py  udp-test.py  wled.py
rfid-testing/: read-test.py  read-with-error.py  serial-test.py  usb-keyboard-test.py  usb-scl3711-test.py
static/: bands.html  magicreaderclient.js  modal-control-magicWand.html  modal-control-reboot.html  modal-control-shutdown.html  styles.css  test.html
templates/: bands.html  index.html
